--- a/polis_app/public/index.html
+++ b/polis_app/public/index.html
@@ -29,11 +29,17 @@
     <style>
       html,
       body,
-      .main {
+      .main{
         margin: 0;
         height: 100%;
         width: 100%;
       }
+      .image-filter{
+        filter: blur(8px);
+       -webkit-filter: blur(8px)
+      }
+
+   
     </style>
   </head>
   <body>
